--- a/FEngViewer/Properties/Resources.resx
+++ b/FEngViewer/Properties/Resources.resx
@@ -144,4 +144,14 @@
             PublicKeyToken=b03f5f7f11d50a3a
         </value>
     </data>
+    <data name="TreeItem_Script" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\code-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b03f5f7f11d50a3a
+        </value>
+    </data>
+    <data name="TreeItem_ScriptTrack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\sliders-h-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b03f5f7f11d50a3a
+        </value>
+    </data>
 </root>
