--- a/FEngViewer/Properties/Resources.resx
+++ b/FEngViewer/Properties/Resources.resx
@@ -169,4 +169,7 @@
   <data name="TreeItem_ResourceList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\file-archive-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TreeItem_SimpleImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shapes-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
