--- a/FEngViewer/Properties/Resources.resx
+++ b/FEngViewer/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="TreeItem_MessageResponse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\exclamation-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DefaultTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\The_Missing_textures.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
