--- a/FEngViewer/Properties/Resources.resx
+++ b/FEngViewer/Properties/Resources.resx
@@ -118,32 +118,47 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="TreeItem_String" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\heading-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeItem_MessageResponse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exclamation-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeItem_Script" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\code-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DefaultTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\The_Missing_textures.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeItem_GenericResource" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\file-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeItem_ScriptTrack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sliders-h-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TreeItem_Group" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\object-group-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0,
+            Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeItem_Package" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\project-diagram-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0,
             Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TreeItem_Image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\image-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
             PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TreeItem_Package" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\project-diagram-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0,
-            Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TreeItem_Message" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\envelope-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TreeItem_String" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\heading-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
-            PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TreeItem_ResourceList" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\file-archive-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TreeItem_Script" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\code-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
-            PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TreeItem_ScriptTrack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\sliders-h-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral,
-            PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TreeItem_ColoredImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\paint-roller-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TreeItem_ObjectList" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\layer-group-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TreeItem_Movie" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\file-video-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,31 +169,22 @@
   <data name="TreeItem_ScriptEvent" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bolt-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TreeItem_Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\font-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TreeItem_GenericResource" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\file-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TreeItem_ColoredImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\paint-roller-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TreeItem_Keyframe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clock-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TreeItem_ObjectList" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\layer-group-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TreeItem_ResourceList" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\file-archive-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TreeItem_Message" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\envelope-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="TreeItem_SimpleImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shapes-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TreeItem_MessageResponse" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\exclamation-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TreeItem_Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\font-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="DefaultTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\The_Missing_textures.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Action_Play" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\play-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Action_Pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pause-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
